@@ -1,5 +1,12 @@
 2018-01-05  Tom Tromey  <tom@tromey.com>
 
+	* gdbtypes.h (add_dyn_prop): Remove objfile parameter.
+	* gdbtypes.c (add_dyn_prop): Remove objfile parameter.
+	(create_array_type_with_stride): Update.
+	* dwarf2read.c (set_die_type): Update.
+
+2018-01-05  Tom Tromey  <tom@tromey.com>
+
 	* dwarf2read.c (delayed_method_info): Remove typedef.
 	(dwarf2_cu::method_info): Now a std::vector.
 	(add_to_method_list): Update.
